--- a/public/assets/assets/i18n/es/translation.json
+++ b/public/assets/assets/i18n/es/translation.json
@@ -67,47 +67,47 @@
     "DRAGON_TIGER": "Dragón tigre",
     "AMAR_AKBAR_ANTHONY": "Mayor orden doblado",
     "RACE_20-20": "  Carrera 20-20",
-    "BOLLYWOOD_CASINO": "Bollywood Casino",
-    "ROULETTE": "Roulette ",
+    "BOLLYWOOD_CASINO": "Casino Bollywood",
+    "ROULETTE": "Ruleta ",
     "SICKBO": "Sickbo",
     "MUFLIS_TEENPATTI": "Muflis Teenpatti",
-    "TRIO": "Trio",
-    "BACCARAT": "Baccarat",
-    "CASINO_METER": "Casino Meter",
-    "POKER_20-20": "Poker 20-20 ", 
-    "2_CARD_TEENPATTI": "2 Card Teenpatti",
-    "QUEEN_RACE": "Queen Race ",
-    "TEENPATTI_TEST": "Teenpatti Test",
-    "TRAP": "Trap",
-    "TEENPATTI_OPEN": "Teenpatti Open",
-    "CASINO_WAR": "Casino War",
-    "29-CARD_BACCARAT": "29 Card Baccarat",
-    "CRICKET": "Cricket",
-    "ALL_INDIAN_CASINO": "All Indian Casino",
-    "BACK_TO_TOP": "Back to Top",
-    "INFO": "Info",
-    "PRIVACY_POLICY": "Privacy Policy",
-    "TERMS_AND_CONDITIONS": "Terms and Conditions",
-    "GAMBLING_CAN_BE_ADDICTIVE": "Gambling can be addictive",
-    "GET_STARTED": "Get started",
-    "ABOUT_US": "About Us",
-    "KYC_AND_PRIVACY_POLICY": "KYC and Privacy Policy",
-    "SPORTSSEXCH": "Sportsexch",
-    "DOWNLOAD_OUR_MOBILE_APP": "Download our mobile app",
-    "HELPLINE_NUMBER":"Helpline Number",
-    "DEPOSIT": "Deposit",
+    "TRIO": "Trío",
+    "BACCARAT": "Bacará",
+    "CASINO_METER": "Medidor de casino",
+    "POKER_20-20": "Póquer 20-20 ", 
+    "2_CARD_TEENPATTI": "2 tarjeta Teenpatti",
+    "QUEEN_RACE": "Carrera reina ",
+    "TEENPATTI_TEST": "Prueba de Teenpatti",
+    "TRAP": "Trampa",
+    "TEENPATTI_OPEN": "Teenpatti abierto",
+    "CASINO_WAR": "Guerra de casinos",
+    "29-CARD_BACCARAT": "Bacará de 29 cartas",
+    "CRICKET": "Grillo",
+    "ALL_INDIAN_CASINO": "Todos los casinos indios",
+    "BACK_TO_TOP": "Volver arriba",
+    "INFO": "Información",
+    "PRIVACY_POLICY": "Política de privacidad",
+    "TERMS_AND_CONDITIONS": "Términos y condiciones",
+    "GAMBLING_CAN_BE_ADDICTIVE": "El juego puede ser adictivo",
+    "GET_STARTED": "Empezar",
+    "ABOUT_US": "Sobre nosotros",
+    "KYC_AND_PRIVACY_POLICY": "KYC y política de privacidad",
+    "SPORTSSEXCH": "Deportesexch",
+    "DOWNLOAD_OUR_MOBILE_APP": "Descarga nuestra aplicación móvil",
+    "HELPLINE_NUMBER":"Número de línea de ayuda",
+    "DEPOSIT": "Depósito",
     "UPI": "UPI",
-    "SCAN_BARCODE": "SCAN BARCODE",
-    "DEPOSIT_VIA_UPI": " Deposit Via Upi",
-    "SCORECARD": " Scorecard",
-    "STATISTICS": "Statistics",
-    "CHIPS_SETTING": "Chips Setting",
-    "VALUE": "Value",
-    "UPDATE": "Update",
-    "CHAT_WITH_US": "Chat with us",
-    "CHANGE_PASSWORD": "Change Password",
-    "CURRENT_PASSWORD": "Current Password",
-    "NEW_PASSWORD": "New Password",
-    "CONFIRM_NEW_PASSWORD": "Confirm New Password",
-    "ACCOUNT_STATEMENT": "Account Statement"
+    "SCAN_BARCODE": "ESCANEAR CÓDIGO DE BARRAS",
+    "DEPOSIT_VIA_UPI": " Depósito Vía Upi",
+    "SCORECARD": " Tanteador",
+    "STATISTICS": "Estadísticas",
+    "CHIPS_SETTING": "Configuración de fichas",
+    "VALUE": "Valor",
+    "UPDATE": "Actualizar",
+    "CHAT_WITH_US": "habla con nosotros",
+    "CHANGE_PASSWORD": "Cambiar la contraseña",
+    "CURRENT_PASSWORD": "Contraseña actual",
+    "NEW_PASSWORD": "Nueva contraseña",
+    "CONFIRM_NEW_PASSWORD": "Confirmar nueva contraseña",
+    "ACCOUNT_STATEMENT": "Estado de cuenta"
 }
