--- a/public/assets/i18n/ur/translation.json
+++ b/public/assets/i18n/ur/translation.json
@@ -1,7 +1,7 @@
 {
     "HOME": "گھر",
     "LIVE_CASINO_GAMES": "لائیو کیسینو گیمز",
-    "LIVE_TV":"لائیو ٹی وی",
+    "LIVE_TV": "لائیو ٹی وی",
     "MATCH_NOT_LIVE": "میچ لائیو نہیں۔",
     "MY_BETS": "میری شرطیں",
     "SELECTION": "انتخاب",
@@ -55,6 +55,7 @@
     "STAKE_AMOUNT": "حصہ کی رقم",
     "NO_MATCH": "میں اس وقت کوئی مماثلت دستیاب نہیں ہے۔",
     "INDIAN_CASINO": " انڈین کیسینو",
+    "LIVE_CASINO": "لائیو کیسینو",
     "TEENPATTI_ONE_DAY": "ایک دن ٹین پٹی۔",
     "TEENPATTI_T20": "ٹین پٹی ٹی 20",
     "32_CARD_CASINO": "32 کارڈ کیسینو",
@@ -74,7 +75,7 @@
     "TRIO": "تینوں",
     "BACCARAT": "بکریٹ",
     "CASINO_METER": "کیسینو میٹر",
-    "POKER_20-20": "پوکر 20-20 ", 
+    "POKER_20-20": "پوکر 20-20 ",
     "2_CARD_TEENPATTI": "2 کارڈ ٹین پٹی۔",
     "QUEEN_RACE": "ملکہ ریس",
     "TEENPATTI_TEST": "ٹین پٹی ٹیسٹ",
@@ -94,7 +95,7 @@
     "KYC_AND_PRIVACY_POLICY": "KYC اور رازداری کی پالیسی",
     "SPORTSSEXCH": "اسپورٹس ایکسچ",
     "DOWNLOAD_OUR_MOBILE_APP": "ہماری موبائل ایپ ڈاؤن لوڈ کریں۔",
-    "HELPLINE_NUMBER":"ہیلپ لائن نمبر",
+    "HELPLINE_NUMBER": "ہیلپ لائن نمبر",
     "DEPOSIT": "جمع",
     "UPI": "UPI",
     "SCAN_BARCODE": "بار کوڈ اسکین کریں۔",
@@ -109,5 +110,8 @@
     "CURRENT_PASSWORD": "موجودہ خفیہ لفظ",
     "NEW_PASSWORD": "نیا پاس ورڈ",
     "CONFIRM_NEW_PASSWORD": "نئے پاس ورڈ کی توثیق کریں",
-    "ACCOUNT_STATEMENT": "اکاؤنٹ اسٹیٹمنٹ"
-} 
+    "ACCOUNT_STATEMENT": "اکاؤنٹ اسٹیٹمنٹ",
+    "SLOTS": "سلاٹس",
+    "IPL_CLUB": "آئی پی ایل کلب"
+
+}
